--- a/auth/package.json
+++ b/auth/package.json
@@ -4,23 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "test": "jest --watchAll --no-cache"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cookie-session": "^2.0.44",
+    "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.12",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/mongoose": "^5.11.97",
-    "cookie-session": "^2.0.0",
+    "@types/jsonwebtoken": "^8.5.1",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "express-validator": "^6.14.1",
+    "express-validator": "^6.11.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.8",
-    "ts-node-dev": "^2.0.0",
+    "mongoose": "^5.12.11",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.2.4"
   }
 }
