--- a/auth/package.json
+++ b/auth/package.json
@@ -22,5 +22,13 @@
     "mongoose": "^5.12.11",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.3",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.1",
+    "mongodb-memory-server": "^8.7.1",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.5"
   }
 }
