--- a/auth/package.json
+++ b/auth/package.json
@@ -7,6 +7,13 @@
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest --watchAll --no-cache"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
